--- a/src/components/InteractiveStarfield.astro
+++ b/src/components/InteractiveStarfield.astro
@@ -322,6 +322,93 @@ const constellations = [
       { name: 'Omega Psc', x: 22, y: 51, brightness: 0.4 }
     ],
     lines: [[6,4], [4,0], [0,2], [0,1], [1,3], [3,5]]
+  },
+  {
+    id: 'centaurus',
+    name: 'Centauro',
+    distinctiveName: 'El Guerrero Híbrido',
+    planet: 'Jupiter', // Navegación alternativa a Júpiter
+    stars: [
+      { name: 'Rigil Kent', x: 45, y: 85, brightness: 1.0 },
+      { name: 'Hadar', x: 48, y: 88, brightness: 0.9 },
+      { name: 'Menkent', x: 42, y: 82, brightness: 0.8 },
+      { name: 'Muhlifain', x: 50, y: 85, brightness: 0.7 },
+      { name: 'Ke Kwan', x: 46, y: 90, brightness: 0.6 }
+    ],
+    lines: [[2,0], [0,1], [1,3], [0,4]]
+  },
+  {
+    id: 'pegasus',
+    name: 'Pegaso',
+    distinctiveName: 'El Caballo Alado',
+    planet: 'Saturn', // Navegación alternativa a Saturno
+    stars: [
+      { name: 'Markab', x: 75, y: 65, brightness: 0.9 },
+      { name: 'Scheat', x: 78, y: 62, brightness: 0.8 },
+      { name: 'Algenib', x: 82, y: 68, brightness: 0.8 },
+      { name: 'Alpheratz', x: 85, y: 65, brightness: 0.7 },
+      { name: 'Enif', x: 72, y: 70, brightness: 0.7 },
+      { name: 'Homam', x: 80, y: 72, brightness: 0.6 }
+    ],
+    lines: [[0,1], [1,3], [3,2], [2,0], [0,4], [2,5]]
+  },
+  {
+    id: 'auriga',
+    name: 'Auriga',
+    distinctiveName: 'El Cochero Estelar',
+    planet: 'Mars', // Navegación alternativa a Marte
+    stars: [
+      { name: 'Capella', x: 62, y: 18, brightness: 1.0 },
+      { name: 'Menkalinan', x: 65, y: 22, brightness: 0.8 },
+      { name: 'Almaaz', x: 60, y: 25, brightness: 0.7 },
+      { name: 'Hassaleh', x: 58, y: 20, brightness: 0.6 },
+      { name: 'Sadatoni', x: 67, y: 26, brightness: 0.5 }
+    ],
+    lines: [[3,0], [0,1], [1,4], [4,2], [2,3]]
+  },
+  {
+    id: 'hercules',
+    name: 'Hércules',
+    distinctiveName: 'El Héroe Inmortal',
+    planet: 'Earth', // Navegación alternativa a la Tierra
+    stars: [
+      { name: 'Kornephoros', x: 88, y: 15, brightness: 0.8 },
+      { name: 'Zeta Her', x: 85, y: 18, brightness: 0.7 },
+      { name: 'Pi Her', x: 90, y: 12, brightness: 0.6 },
+      { name: 'Eta Her', x: 87, y: 22, brightness: 0.6 },
+      { name: 'Delta Her', x: 82, y: 15, brightness: 0.5 },
+      { name: 'Mu Her', x: 92, y: 20, brightness: 0.5 }
+    ],
+    lines: [[4,1], [1,0], [0,2], [1,3], [3,5]]
+  },
+  {
+    id: 'bootes',
+    name: 'Boyero',
+    distinctiveName: 'El Pastor Celestial',
+    planet: 'Mercury', // Navegación alternativa a Mercurio
+    stars: [
+      { name: 'Arcturus', x: 55, y: 35, brightness: 1.0 },
+      { name: 'Nekkar', x: 53, y: 32, brightness: 0.7 },
+      { name: 'Seginus', x: 57, y: 38, brightness: 0.6 },
+      { name: 'Izar', x: 58, y: 33, brightness: 0.8 },
+      { name: 'Muphrid', x: 52, y: 37, brightness: 0.6 }
+    ],
+    lines: [[1,0], [0,3], [0,2], [0,4]]
+  },
+  {
+    id: 'hydra',
+    name: 'Hidra',
+    distinctiveName: 'La Serpiente de Agua',
+    planet: 'Neptune', // Navegación alternativa a Neptuno
+    stars: [
+      { name: 'Alphard', x: 35, y: 70, brightness: 0.9 },
+      { name: 'Gamma Hya', x: 32, y: 65, brightness: 0.7 },
+      { name: 'Zeta Hya', x: 38, y: 68, brightness: 0.6 },
+      { name: 'Beta Hya', x: 40, y: 72, brightness: 0.5 },
+      { name: 'Xi Hya', x: 30, y: 68, brightness: 0.5 },
+      { name: 'Nu Hya', x: 42, y: 75, brightness: 0.4 }
+    ],
+    lines: [[4,1], [1,0], [0,2], [2,3], [3,5]]
   }
 ];
 ---
